@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<dataset>
+	<!-- To test the deletion mentioned below, the store must exist -->
+	<tx_externalimporttest_store>
+		<uid>3</uid>
+		<pid>1</pid>
+		<name>Sin City</name>
+		<store_code>SIN</store_code>
+	</tx_externalimporttest_store>
+	<!-- Existing product in store should be deleted for store without any product (see SIN CITY in Stores.csv) -->
+	<tx_externalimporttest_store_product>
+		<uid>1</uid>
+		<pid>1</pid>
+		<store>3</store>
+		<product>1</product>
+		<stock>42</stock>
+	</tx_externalimporttest_store_product>
+</dataset>
